--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Quiz PDD</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="continue_text">continue</string>
+    <string name="back">Назад</string>
+    <string name="study">Учиться</string>
+    <string name="training">Тренировка</string>
 </resources>
